# byox_vllm

./: .gitignore  .pre-commit-config.yaml  .python-version  ContextForAI.md  README.md  bench.py  compile_commands.json  consistency_todo.md  example.py  ngram.py  norm.cuh  pyproject.toml  requirements.txt  spec_decode.py  vllm_ngram.py
byoxvllm/: attention.py  config.py  engine.py  layers.py  qwen3.py  run.py  sampling_params.py
byoxvllm/rmsnorm_kernel/: norm.py  norm_ext.cu  setup.py  test_norm.py
diff_test/: test_RMSNorm.py  test_RoPE.py  test_SelfAttn.py  test_mlp.py
nanovllm/: __init__.py  config.py
nanovllm/engine/: block_manager.py  input_batch.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
nanovllm/models/: qwen3.py
nanovllm/sample/: metadata.py  rejection_sampler.py  sampler.py  sampling_params.py
nanovllm/spec_decode/: metadata.py  ngram_proposer.py
nanovllm/utils/: context.py  loader.py  logging.py
notes/: BBPE.md  GQA.md  GQA.py  QK-Norm.md  RMSNorm.md  RoPE.md  Sigmoid_SiLU.md  SwiGLU.md  TP.md  architecture.md  todo.md
notes/how_torch_compile_works/: README.md  print_IR.py  step1_fx_graph.py  step2_fx_optimization.py  step3_torchinductor_code.py
tests/: test_cache.py  test_prepare_funcs.py  test_rejection_sampler.py  test_sampler.py  test_scheduler.py
tools/pre_commit/: check_pickle_imports.py  check_triton_import.py  enforce_regex_import.py  mypy.py  validate_config.py
